update all models and controller
